// Copyright (c) 2026 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.protocol.v31;

import "com/digitalasset/canton/crypto/v30/crypto.proto";
import "com/digitalasset/canton/protocol/v30/participant_transaction.proto";
import "scalapb/scalapb.proto";

// Messages sent by a participant as part of the transaction protocol

// Compared to v30: ExternalAuthorization updated to v31
message SubmitterMetadata {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.AlphaProtoVersion";

  com.digitalasset.canton.crypto.v30.Salt salt = 1;
  repeated string act_as = 2;
  string user_id = 3;
  string command_id = 4;
  string submitting_participant_uid = 5;
  string submission_id = 6; // optional; absent if not specified by submitter
  v30.DeduplicationPeriod dedup_period = 7;

  // Max sequencing time is the time allowed for a submitted transaction to be sequenced. Typically
  // seconds or minutes in the future.
  int64 max_sequencing_time = 8; // in microseconds of UTC time since Unix epoch

  ExternalAuthorization external_authorization = 9; // optional
}

// Compared to v30: HashingSchemeVersion V3 enum added
message ExternalAuthorization {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.AlphaProtoVersion";

  // The hashing scheme version used when building the hash
  enum HashingSchemeVersion {
    HASHING_SCHEME_VERSION_UNSPECIFIED = 0;
    reserved 1; // Hashing Scheme V1 - unsupported
    HASHING_SCHEME_VERSION_V2 = 2;
    HASHING_SCHEME_VERSION_V3 = 3;
  }

  repeated v30.ExternalPartyAuthorization authentications = 1;
  HashingSchemeVersion hashing_scheme_version = 2;

  // Max record time is an optional bit of signed metadata the allows an external signer to
  // know an upper limit on when it must be processed by the executing participant node to be
  // valid. Typically hours or days in the future.
  optional int64 max_record_time = 3;
}
